--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql2
-  database: bluebee
+  database: student
   username: root
   password:
   host: localhost
