how to use ajax with json & rails

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,18 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  
-  database: bluebee_test
+  adapter: mysql2
+  database: student_test
+  username: root
+  password:
+  host: localhost
+
 
 production:
 
-  database: bluebee_production
+  adapter: mysql2
+  database: student_production
+  username: root
+  password:
+  host: localhost
 
